First pass at having folders returned via Solr rather than ActiveFedora on Box Show page

--- a/app/views/pul_store/lae/boxes/show.html.erb
+++ b/app/views/pul_store/lae/boxes/show.html.erb
@@ -16,4 +16,9 @@
 	<div class="row">
 		<%= render :partial => 'box_attributes' %>
 	</div>
+	<div class="row">
+	  <div class="span9">
+		<%= render :partial => 'folders_table' %>
+	  </div>
+	</div>
 </div>
