--- a/app/views/pul_store/lae/folders/_form.html.erb
+++ b/app/views/pul_store/lae/folders/_form.html.erb
@@ -36,7 +36,6 @@
       <%= b.label :sort_title, :class=>"control-label" %>
       <div class="controls">
         <%= b.text_field :sort_title %>
-        <span class="help-block">Correct as Needed.</span>
       </div>
     </div>
     <!-- Alternative Title -->
@@ -80,7 +79,7 @@
     <% end %>
     <div class="control-group date-toggle">
       <div class="controls">
-        <button id="date-type-toggle" type="button" class="btn"><%= date_toggle_message %></button>
+        <button id="date-type-toggle" type="button" class="btn btn-info"><%= date_toggle_message %></button>
       </div>
     </div>
     <!-- date created -->
