refactor folder edit/folder show pages to use solr to fetch the editable folders list. Add placeholder for page images on a folder screen. Add a lookup for pages by folder id via Solr (tests pending on that issue). Should improve #166

--- a/app/views/pul_store/lae/boxes/_folders_table.html.erb
+++ b/app/views/pul_store/lae/boxes/_folders_table.html.erb
@@ -1,4 +1,4 @@
-<table class="table" id="folders-table">
+<table class="table table-condensed" id="folders-table">
     <thead>
       <tr>
         <th class="header headerSortUp">Folder Number</th>
@@ -10,6 +10,11 @@
       </tr>
     </thead>
     <tbody>
+    <% if @box.folders.empty? %>
+      <tr class="info" id="empty-folder-row">
+        <td colspan="6">Add a Folder</td>
+      </tr>
+    <% else %>
     <% @folder_list.each do |f| %>
       <tr>
         <td><%= f['prov_metadata__physical_number_ssi'] %></td>
@@ -27,6 +32,7 @@
           <% end %>
         </td>
       </tr>
+      <% end %>
   <% end %>
   </tbody>
   </table>
