--- a/app/views/pul_store/lae/folders/show.html.erb
+++ b/app/views/pul_store/lae/folders/show.html.erb
@@ -21,5 +21,8 @@
     <%= render :partial => 'folder_attributes' %>
   </div>
 <!-- other fields to display -->
+<div class="row">
+  <%= render :partial => 'pages_list' %>
+</div>
 
 
