--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,7 +1,9 @@
-<div class="row">
-	<div class="span12 well offset1">
+<footer class="footer">
+<div class="row well">
+	<div class="span12">
 		<div class="pull-right">
 			<p>&copy; Trustees of Princeton University</p>
 		</div>
 	</div>
 </div>
+</footer>
