Hotfix broken 'pages' template. Needs Tests

--- a/app/views/pul_store/lae/folders/_pages_list.html.erb
+++ b/app/views/pul_store/lae/folders/_pages_list.html.erb
@@ -1,3 +1,4 @@
+<% if !@pages_list.blank? %>
 <h2>Images</h2>
 <ul class="thumbnails">
 <% @pages_list.each do |page| %>
@@ -8,3 +9,4 @@
   </li>
 <% end %>
 </ul>
+<% end %>
