alpha pass at subjects editing, includes addition of underscore and poltgerist gems
test new form modal with poltergeist

first pass at functional lae category subjects feature. Adds poltergeist phantomjs gem for javascript browser testing

--- a/app/views/pul_store/lae/boxes/_folders_table.html.erb
+++ b/app/views/pul_store/lae/boxes/_folders_table.html.erb
@@ -15,7 +15,7 @@
         <td colspan="6">Add a Folder</td>
       </tr>
     <% else %>
-    <% if can?(:edit, @box) %>
+    <% if can?(:edit, @box) && !@folder_list.nil? %>
       <% @folder_list.each do |f| %>
         <tr>
           <td><%= f['prov_metadata__physical_number_ssi'] %></td>
