--- a/app/views/pul_store/lae/folders/_folder_attributes.html.erb
+++ b/app/views/pul_store/lae/folders/_folder_attributes.html.erb
@@ -5,7 +5,7 @@
 	</dd>
 	<dt>Title</dt>
 	<dd>
-		<% if !@folder.title.empty? %>
+		<% if !@folder.title.first.blank? %>
     		<%= @folder.title.first %>
   		<% else %>
     		[Title not yet supplied]
