--- a/app/views/pul_store/lae/folders/_ajax_form.erb
+++ b/app/views/pul_store/lae/folders/_ajax_form.erb
@@ -26,7 +26,7 @@
   <div class="control-group">
     <%= f.label :genre, class: 'control-label' %>
     <div class="controls">
-      <%= f.select(:genre, options_for_select(list_all_genres_as_select_list), class: 'input-small') %>
+      <%= f.select(:genre, options_for_select(list_all_genres_as_select_list), class: 'input-small', prompt: 'Select a Genre') %>
     </div>
   </div>
   <div class="control-group">
