--- a/app/views/pul_store/lae/folders/_form.html.erb
+++ b/app/views/pul_store/lae/folders/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @folder, html: {:class => 'form-horizontal editor'} do |b| %>
+<%= form_for @folder, html: {:class => 'form-horizontal editor lae-folder'} do |b| %>
   <% if @folder.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@folder.errors.count, "error") %> prohibited this Folder from being saved:</h2>
@@ -114,7 +114,7 @@
     </div>
     <!-- Subject -->
 
-    <div class="control-group">
+    <div class="control-group lae-subjects">
       <%= b.label 'Categories and Subjects', :class => 'control-label' %>
       <%= render :partial => "form_subjects", locals: {subject: :subject, category: :category} %>
     </div>
