--- a/app/views/pul_store/lae/folders/edit_fields/_geographic_subject.erb
+++ b/app/views/pul_store/lae/folders/edit_fields/_geographic_subject.erb
@@ -1,6 +1,6 @@
 <div class="controls" <%  if index == 0 %> id="additional_<%= key.to_s %>_clone" <% end %>>
   <% required = render_req && (index == 0) && f.object.required?(key) %>
-  <%= select_tag("#{ActiveModel::Naming.param_key(f.object)}[#{key.to_s}][]", options_for_select(list_all_areas_as_select_list, [@folder.geographic_subject[index]]), prompt: "Select") %>
+  <%= select_tag("#{ActiveModel::Naming.param_key(f.object)}[#{key.to_s}][]", options_for_select(list_all_areas_as_select_list, [@folder.geographic_subject[index]]), prompt: "Select One") %>
   <% unless f.object.class.unique?(key) %>
     <%= render :partial=>"records/edit_fields/suffix", :locals=>{key: key, index: index} %>
   <% end %>
